chore: update github dark

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ commit-backfill.py
 .cursor
 # touched on 2025-06-13T17:42:09.704134Z
 # touched on 2025-06-13T17:42:30.568990Z
+# touched on 2025-06-13T17:43:22.012988Z
